# image_annotator

./: .gitignore  README.md  annotations.csv  app.py  pyproject.toml
templates/: annotation.html  index.html
