[tool.poetry]
name = "image-annotater"
version = "0.1.0"
description = ""
authors = ["setsaa <sigurdsets@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.2"
numpy = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
